[gd_scene load_steps=8 format=3 uid="uid://csfdw1hxl68ax"]

[ext_resource type="Script" uid="uid://dxug6pee02lqt" path="res://scripts/ui/question_ui.gd" id="1_knkug"]
[ext_resource type="Script" uid="uid://d1d6qn7x3jcmg" path="res://scripts/ui/nine_patch_rect_container.gd" id="1_sd07m"]
[ext_resource type="Texture2D" uid="uid://dcctilcjnhmtd" path="res://art/kenney_ui-pack/Vector/Blue/button_square_border.svg" id="2_knkug"]
[ext_resource type="Theme" uid="uid://cpqjmgf861frq" path="res://themes/fnmt.tres" id="3_hxwhs"]
[ext_resource type="Texture2D" uid="uid://boa8qsbav1bj2" path="res://art/kenney_ui-pack-space-expansion/PNG/Red/Default/bar_square_large_square.png" id="4_mi1kx"]
[ext_resource type="Texture2D" uid="uid://ooydqe06gr3j" path="res://art/kenney_ui-pack-space-expansion/Vector/Yellow/bar_square_large_square.svg" id="6_hxwhs"]
[ext_resource type="Script" uid="uid://cugevxe1378xo" path="res://scripts/ui/answer_button.gd" id="7_mi1kx"]

[node name="QuestionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knkug")

[node name="Container" type="Container" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sd07m")
tile_scale = 4.0

[node name="NinePatchRect" type="NinePatchRect" parent="Container"]
layout_mode = 2
texture = ExtResource("2_knkug")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="Container/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hxwhs")

[node name="VBoxContainer" type="VBoxContainer" parent="Container/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Container/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchOpoId" type="NinePatchRect" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_mi1kx")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/NinePatchOpoId"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hxwhs")
theme_type_variation = &"margin_container_label"

[node name="OpoCode" type="Label" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/NinePatchOpoId/MarginContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme = ExtResource("3_hxwhs")
text = "OE 20/23"
vertical_alignment = 1
autowrap_mode = 2

[node name="QuestionNumber" type="Label" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/NinePatchOpoId/MarginContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme = ExtResource("3_hxwhs")
text = "#1"
horizontal_alignment = 2
autowrap_mode = 2

[node name="NinePatchQuestionCategory" type="NinePatchRect" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_hxwhs")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/NinePatchQuestionCategory"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hxwhs")
theme_type_variation = &"margin_container_label"

[node name="QuestionCategory" type="Label" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/NinePatchQuestionCategory/MarginContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme = ExtResource("3_hxwhs")
text = "Específico"
vertical_alignment = 1
autowrap_mode = 2

[node name="QuestionBody" type="Label" parent="Container/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
text = "Completa la afirmación de forma correcta: Con la firma electrónica podemos"
autowrap_mode = 3

[node name="AnswerList" type="VBoxContainer" parent="Container/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/AnswerList"]
layout_mode = 2
text = "A) Asegurar la integridad del documento o texto firmado"
autowrap_mode = 2
script = ExtResource("7_mi1kx")

[node name="Button2" type="Button" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/AnswerList"]
layout_mode = 2
text = "B) Asegurar la fecha y hora del momento en el que se firma"
autowrap_mode = 2
script = ExtResource("7_mi1kx")

[node name="Button3" type="Button" parent="Container/NinePatchRect/MarginContainer/VBoxContainer/AnswerList"]
layout_mode = 2
text = "C) Asegurar la fecha y hora del momento en el que se firma"
autowrap_mode = 2
script = ExtResource("7_mi1kx")
